4-Construccion-orquestacion-contenedores/6-ingress-and-volumes/10-Ingress/k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace 
metadata: 
  labels:
    name: intro-k8s-namespace
  name: intro-k8s
