4-Construccion-orquestacion-contenedores/6-ingress-and-volumes/10-Ingress/k8s/2-app-saludo.yaml
#####################
# app-saludo ----------------------------------------------
#####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-saludo-deployment
  namespace: intro-k8s
  labels:
    app: app-saludo
    maintainer: matiops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-saludo
  template:
    metadata:
      labels:
        app: app-saludo
    spec:
      containers:
      - name: app-saludo
        image: matiops/intro-k8s:app-saludo
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-saludo-service
  namespace: intro-k8s
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8000
  selector:
    app: app-saludo
