4-Construccion-orquestacion-contenedores/6-ingress-and-volumes/10-Ingress/k8s/3-app-contador.yaml
#####################
# app-contador ----------------------------------------------
#####################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-contador-deployment
  namespace: intro-k8s
  labels:
    app: app-contador
    maintainer: matiops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-contador
  template:
    metadata:
      labels:
        app: app-contador
    spec:
      containers: # <- ¡Multi-container pod! La app hace consultas al redis en localhost
      - name: app-contador
        image: matiops/intro-k8s:app-contador
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      - name: redis-contador
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: app-contador-service
  namespace: intro-k8s
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080   # <- Prestar atencion
      targetPort: 8000
  selector:
    app: app-contador # <-
